--- a/SignalRCore.Web/Views/Home/Index.cshtml
+++ b/SignalRCore.Web/Views/Home/Index.cshtml
@@ -26,6 +26,9 @@
                     setTimeout(() => Start(),2000)
                 });
             }
+
+            statusShow();
+
             connection.onreconnecting(err => {
                 $("#loading").show();
                 statusShow();
@@ -45,7 +48,14 @@
 
             })
 
-           
+            connection.on("ReceiveClientCount", (clientCount) => {
+
+                $("#clientCount").text(clientCount);
+            })
+
+            connection.on("Notify", (countText) => {
+                $("#notify").html(`<div class="alert alert-success"> ${countText}</div>`)
+            })
 
             $("#btnNameSave").click(() => {
                 connection.invoke("SendName", $("#txtName").val()).catch((err) => console.log(err))
@@ -67,7 +77,8 @@
         <button class="btn btn-primary" id="btnNameSave">Record Name  </button>
         <div class="alert alert-info">
             <div class="float-left">
-                Connection State: <strong id="conStatus"></strong>
+                Connection State: <strong id="conStatus"></strong><br />    
+                Client Count: <strong id="clientCount">  </strong>
             </div>
             <div class="float-right">
                 <div id="loading" class="spinner-border" role="status">
@@ -76,7 +87,7 @@
             </div>
             <div class="clearfix">   </div>
         </div>
-
+        <div id="notify"></div>
     </div>
     <div class="col-md-8 offset-2" >
         <ul class="list-group" id="namesList">
