Strong types, Groups, CodeFirstMigration were added.

--- a/SignalRCore.Web/Views/Home/Index.cshtml
+++ b/SignalRCore.Web/Views/Home/Index.cshtml
@@ -17,22 +17,35 @@
                 $("#conStatus").text(connection.connectionState);
             }
 
+
+
             function Start() {
                 connection.start().then(() => {
                     statusShow();
                     $("#loading").hide();
+
+                    connection.invoke("GetNames")
+                    connection.invoke("GetNamesByGroup");
+
                 }).catch((err) => {
                     console.log(err);
                     setTimeout(() => Start(),2000)
                 });
             }
 
-
             statusShow();
         
             connection.on("Error", (err) => {
                 alert(err);
             })
+
+            connection.on("ReceiveNames", (names) => {
+                $("#namesList").empty();
+
+                names.forEach((item, index) => {
+                    $("#namesList").append(`<li class="list-group-item">${item} </li>`)
+                })
+            } )
 
             connection.onreconnecting(err => {
                 $("#loading").show();
@@ -53,7 +66,6 @@
 
             })
 
-
             connection.on("ReceiveClientCount", (clientCount) => {
 
                 $("#clientCount").text(clientCount);
@@ -63,15 +75,86 @@
                 $("#notify").html(`<div class="alert alert-success"> ${countText}</div>`)
             })
 
+            connection.on("ReceiveName", (name) => {
+                $("#namesList").append(`<li class="list-group-item"> ${name} </li>`)
+            })
+
+            connection.on("ReceiveMessageByGroup", (name, teamId) => {
+
+                let listName;
+
+                if (teamId == 1) {
+                    listName = "ATeamList";
+                }
+                else {
+                    listName = "BTeamList";
+                }
+
+                $(`#${listName}`).append(`<li class="list-group-item"> ${name}</li>`)
+            })
+
+            connection.on("ReceiveNamesByGroup", (teams) => {
+
+                teams.forEach((team, index) => {
+
+                    let listName;
+
+                    if (team.teamId == 1) {
+                        listName = "ATeamList";
+                    }
+                    else {
+                        listName = "BTeamList";
+                    }
+
+                    team.users.forEach((user, ind) => {
+                        $(`#${listName}`).append(`<li class="list-group-item"> ${user.name}</li>`)
+                    })
+
+
+
+                })
+            })
+
+            connection.on("ReceiveProduct", (product) => { console.log(product) })
+
+
+
+            $("#btnProduct").click(() => {
+                let product = { "Id": 1, "Name": "Pen", "Price": 100, "Stock": 200 };
+
+                connection.invoke("SendProduct", product);
+            })
 
             $("#btnNameSave").click(() => {
                 connection.invoke("SendName", $("#txtName").val()).catch((err) => console.log(err))
             })
 
-            connection.on("ReceiveName", (name) => {
-                $("#namesList").append(`<li class="list-group-item"> ${name} </li>`)
+            $("#btnNameTeam").click(() => {
+                let name = $("#txtName").val();
+
+                let teamName = $("input[type=radio]:checked").val();
+                if (teamName==null) {
+                    alert("Takım seçiniz")
+                    return;
+                }
+                connection.invoke("SendNameByGroup", name, teamName).catch((err) => { console.log(err); })
             })
 
+            $("input[type=radio]").change(() => {
+                let value = $(`input[type=radio]:checked`).val();
+
+                if (value == "Team A") {
+                    connection.invoke("AddToGroup", value);
+
+                    connection.invoke("RemoveToGroup", "Team B");
+                }
+                else {
+                    connection.invoke("AddToGroup", value);
+
+                    connection.invoke("RemoveToGroup", "Team A");  
+                }
+            })
+             
 
         })
        
@@ -81,16 +164,14 @@
 <div class="row">
     <div class="col-md-8 offset-2">
         <input class="form-control" type="text" id="txtName" />
-        <hr />  
+        <hr />
         <button class="btn btn-primary" id="btnNameSave">Record Name  </button>
-        <div class="alert alert-info">
+        <button class="btn btn-warning" id="btnNameTeam">Record Name as Team  </button>
+        <button class="btn btn-danger" id="btnProduct"> Send Product</button>
+        <div class="alert alert-info mt-2">
             <div class="float-left">
-
-                Connection State: <strong id="conStatus"></strong><br />    
+                Connection State: <strong id="conStatus"></strong><br />
                 Client Count: <strong id="clientCount">  </strong>
-
-                Connection State: <strong id="conStatus"></strong>
-
             </div>
             <div class="float-right">
                 <div id="loading" class="spinner-border" role="status">
@@ -99,13 +180,28 @@
             </div>
             <div class="clearfix">   </div>
         </div>
-
         <div id="notify"></div>
-
     </div>
-    <div class="col-md-8 offset-2" >
-        <ul class="list-group" id="namesList">
-        </ul>
-
+</div>
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="TeamGroup"  value="Team A"/>
+            <label class="form-check-label">A Team </label>
+        </div>  
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="TeamGroup"  value="Team B"/>
+            <label class="form-check-label">B Team </label>
+        </div>
+    </div>
+    <div class="col-md-8 offset-2">
+        <div class="row">
+            <div class="col-md-6">
+                <ul class="list-group" id="ATeamList"></ul>
+            </div>
+            <div class="col-md-6">
+                <ul class="list-group" id="BTeamList"></ul>
+            </div>
+        </div>
     </div>
 </div>
